# speech-emotion-recognition

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: train_config.yaml
docs/: API_REFERENCE.md  TECHNICAL_REPORT.md
notebooks/: exploratory_analysis.ipynb
scripts/: __init__.py  evaluate.py  extract_features.py  train.py
src/: __init__.py  api.py  app.py  inference.py
src/data/: __init__.py  augmentation.py  dataset.py  preprocessing.py
src/models/: __init__.py  attention.py  layers.py  ser_net.py
src/training/: __init__.py  callbacks.py  losses.py  trainer.py
tests/: __init__.py  test_ser.py
